--- a/slurm_clustermq.tmpl
+++ b/slurm_clustermq.tmpl
@@ -8,10 +8,10 @@
 #SBATCH --array=1-{{ n_jobs }}
 
 
-cd /home/veronika/change_point_detection
+cd /home/veronika/CPD/change_point_detection
 
 module load \
-  r-4.0.3-gcc-9.2.0-hkh5nyw \
+  r-4.0.4-gcc-9.2.0-lsx6hyr \
   byobu-5.127-gcc-9.2.0-by2qc2g \
   ccache-3.3.4-gcc-9.2.0-v3xzqqh \
   curl-7.63.0-gcc-9.2.0-cq4w37y \
